add new formulas

--- a/sections/main_formulas.tex
+++ b/sections/main_formulas.tex
@@ -6,3 +6,46 @@ Długość wektora \( \mathbf{V} \) jest określona jako:
 \|\mathbf{V}\| = \sqrt{V_x^2 + V_y^2 + V_z^2}
 \]
 \textbf{Opis:} Ten wzór pozwala obliczyć długość (moduł) wektora w przestrzeni trójwymiarowej, używając jego współrzędnych \( V_x \), \( V_y \), \( V_z \).
+
+\vspace{1em}
+\noindent
+Iloczyn skalarny dwóch wektorów \( \mathbf{V} \) i \( \mathbf{W} \) jest określony jako:
+
+\[
+\mathbf{V} \cdot \mathbf{W} = V_x W_x + V_y W_y + V_z W_z
+\]
+\noindent
+\textbf{Opis:} Ten wzór oblicza iloczyn skalarny (dot product) dwóch wektorów w przestrzeni trójwymiarowej, mnożąc odpowiadające sobie współrzędne \( V_x \), \( W_x \), \( V_y \), \( W_y \), \( V_z \), \( W_z \) i sumując wyniki.
+
+
+\vspace{1em}
+\noindent
+Iloczyn wektorowy dwóch wektorów \( \mathbf{V} \) i \( \mathbf{W} \) jest określony jako:
+
+\[
+\mathbf{V} \times \mathbf{W} = 
+\begin{bmatrix}
+V_y W_z - V_z W_y \\
+V_z W_x - V_x W_z \\
+V_x W_y - V_y W_x
+\end{bmatrix}
+\]
+
+\vspace{1em}
+\noindent
+\textbf{Opis:} Iloczyn wektorowy (cross product) dwóch wektorów w przestrzeni trójwymiarowej tworzy nowy wektor, który jest prostopadły do płaszczyzny utworzonej przez \( \mathbf{V} \) i \( \mathbf{W} \). Składniki nowego wektora są obliczane na podstawie powyższego wzoru.
+
+
+
+\vspace{1em}
+\noindent
+Rzut wektora \( \mathbf{W} \) na \( \mathbf{V} \) jest określony jako:
+
+\[
+\text{proj}_{\mathbf{V}} \mathbf{W} = \frac{\mathbf{V} \cdot \mathbf{W}}{\|\mathbf{V}\|^2} \mathbf{V}
+\]
+
+\vspace{1em}
+\noindent
+\textbf{Opis:} Rzut wektora \( \mathbf{W} \) na \( \mathbf{V} \) to wektor będący projekcją \( \mathbf{W} \) na kierunek \( \mathbf{V} \).
+
