fix values  in vectors section

--- a/sections/vector_operatioins.tex
+++ b/sections/vector_operatioins.tex
@@ -35,11 +35,11 @@ V_{1x} V_{2y} - V_{1y} V_{2x}
     \item[(a)] $\mathbf{V_1} = \begin{bmatrix} 2 \\ 1 \\ 2 \end{bmatrix}, \quad
     \mathbf{V_2} = \begin{bmatrix} 4 \\ 8 \\ 2 \end{bmatrix}$
     
-    \item[(b)] $\mathbf{V_1} = \begin{bmatrix} 2 \\ 0 \\ 4 \end{bmatrix}, \quad
-    \mathbf{V_2} = \begin{bmatrix} 5 \\ 0 \\ 2 \end{bmatrix}$
+    \item[(b)] $\mathbf{V_1} = \begin{bmatrix} 2 \\ 2 \\ 0 \end{bmatrix}, \quad
+    \mathbf{V_2} = \begin{bmatrix} 5 \\ 0 \\ 0 \end{bmatrix}$
     
-    \item[(c)] $\mathbf{V_1} = \begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}, \quad
-    \mathbf{V_2} = \begin{bmatrix} 2 \\ 3 \\ 3 \end{bmatrix}$
+    \item[(c)] $\mathbf{V_1} = \begin{bmatrix} 4 \\ 2 \\ 1 \end{bmatrix}, \quad
+    \mathbf{V_2} = \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix}$
 \end{enumerate}
 
 \subsection*{2. Wyznacz długość wektora $\|\mathbf{V}\|$:}
@@ -49,11 +49,11 @@ V_{1x} V_{2y} - V_{1y} V_{2x}
 \]
 
 \begin{enumerate}
-    \item[(a)] $\mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}$
+    \item[(a)] $\mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}$
     
-    \item[(b)] $\mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}$
+    \item[(b)] $\mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}$
     
-    \item[(c)] $\mathbf{V} = \begin{bmatrix} 3 \\ 4 \\ 3 \end{bmatrix}$
+    \item[(c)] $\mathbf{V} = \begin{bmatrix} 0 \\ 3 \\ 4 \end{bmatrix}$
     
     \item[(d)] $\mathbf{V} = \begin{bmatrix} 3 \\ 4 \\ 5 \end{bmatrix}$
 \end{enumerate}
@@ -74,7 +74,7 @@ V_{1x} V_{2y} - V_{1y} V_{2x}
     
     \item[(b)] $\mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}$
     
-    \item[(c)] $\mathbf{V} = \begin{bmatrix} 3 \\ 4 \\ 3 \end{bmatrix}$
+    \item[(c)] $\mathbf{V} = \begin{bmatrix} 0 \\ 3 \\ 4 \end{bmatrix}$
     
     \item[(d)] $\mathbf{V} = \begin{bmatrix} 3 \\ 4 \\ 5 \end{bmatrix}$
 \end{enumerate}
@@ -87,13 +87,13 @@ V_{1x} V_{2y} - V_{1y} V_{2x}
 
 
 \begin{enumerate}
-    \item[(a)] $\mathbf{W} = \begin{bmatrix} 5 \\ 0 \\ 0 \end{bmatrix}, \quad
+    \item[(a)] $\mathbf{W} = \begin{bmatrix} 5 \\ 5 \\ 0 \end{bmatrix}, \quad
     \mathbf{V} = \begin{bmatrix} 10 \\ 0 \\ 0 \end{bmatrix}$
     
-    \item[(b)] $\mathbf{W} = \begin{bmatrix} 4 \\ 2 \\ 8 \end{bmatrix}, \quad
-    \mathbf{V} = \begin{bmatrix} 4 \\ 4 \\ 0 \end{bmatrix}$
+    \item[(b)] $\mathbf{W} = \begin{bmatrix} 2 \\ 4 \\ 0 \end{bmatrix}, \quad
+    \mathbf{V} = \begin{bmatrix} 8 \\ 4 \\ 0 \end{bmatrix}$
     
-    \item[(c)] $\mathbf{W} = \begin{bmatrix} 2 \\ 3 \end{bmatrix}, \quad
+    \item[(c)] $\mathbf{W} = \begin{bmatrix} 3 \\ 2 \\ 3 \end{bmatrix}, \quad
     \mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 4 \end{bmatrix}$
 \end{enumerate}
 
@@ -122,27 +122,27 @@ V_{1x} V_{2y} - V_{1y} V_{2x}
     \mathbf{W} = \begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}$
     
     \item[(b)] 
-    $\mathbf{U} = \begin{bmatrix} 4 \\ -2 \\ 0 \end{bmatrix}, \quad
-    \mathbf{V} = \begin{bmatrix} -2 \\ 0 \\ 2 \end{bmatrix}, \quad
+    $\mathbf{U} = \begin{bmatrix} 4 \\ 4 \\ 0 \end{bmatrix}, \quad
+    \mathbf{V} = \begin{bmatrix} -2 \\ 2 \\ 0 \end{bmatrix}, \quad
     \mathbf{W} = \begin{bmatrix} 0 \\ 1 \\ 1 \end{bmatrix}$
     
     \item[(c)] 
-    $\mathbf{U} = \begin{bmatrix} 0 \\ 1 \\ 2 \end{bmatrix}, \quad
-    \mathbf{V} = \begin{bmatrix} 0 \\ 2 \\ 3 \end{bmatrix}, \quad
+    $\mathbf{U} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix}, \quad
+    \mathbf{V} = \begin{bmatrix} 2 \\ 0 \\ 3 \end{bmatrix}, \quad
     \mathbf{W} = \begin{bmatrix} 4 \\ 5 \\ 6 \end{bmatrix}$
     
     \item[(d)] 
-    $\mathbf{U} = \begin{bmatrix} -4 \\ -4 \\ -4 \end{bmatrix}, \quad
+    $\mathbf{U} = \begin{bmatrix} 4 \\ -4 \\ 0 \end{bmatrix}, \quad
     \mathbf{V} = \begin{bmatrix} -4 \\ -4 \\ 0 \end{bmatrix}, \quad
     \mathbf{W} = \begin{bmatrix} 0 \\ 0 \\ 10 \end{bmatrix}$
     
     \item[(e)] 
-    $\mathbf{U} = \begin{bmatrix} 2 \\ 1 \\ 2 \end{bmatrix}, \quad
+    $\mathbf{U} = \begin{bmatrix} 2 \\ 2 \\ 1 \end{bmatrix}, \quad
     \mathbf{V} = \begin{bmatrix} 3 \\ 1 \\ 1 \end{bmatrix}, \quad
     \mathbf{W} = \begin{bmatrix} 0 \\ 1 \\ 1 \end{bmatrix}$
     
     \item[(f)] 
-    $\mathbf{U} = \begin{bmatrix} -4 \\ 2 \\ 2 \end{bmatrix}, \quad
-    \mathbf{V} = \begin{bmatrix} -6 \\ 2 \\ 2 \end{bmatrix}, \quad
+    $\mathbf{U} = \begin{bmatrix} 4 \\ -4 \\ 2 \end{bmatrix}, \quad
+    \mathbf{V} = \begin{bmatrix} 6 \\ -2 \\ 2 \end{bmatrix}, \quad
     \mathbf{W} = \begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$
 \end{enumerate}
