--- a/sections/matrix.tex
+++ b/sections/matrix.tex
@@ -8,27 +8,27 @@
     
     \item[(b)] \( M = \begin{bmatrix} 1 & 8 & 9 \\ 0 & 4 & 3 \\ 5 & 0 & 5 \end{bmatrix} \)
     
-    \item[(c)] \( M = \begin{bmatrix} 2 & 7 & 3 \\ 1 & 8 & 9 \\ 1 & 6 & 4 \end{bmatrix} \)
+    \item[(c)] \( M = \begin{bmatrix} 1 & 6 & 4 \\ 2 & 7 & 3 \\ 8 & 9 & 5  \end{bmatrix} \)
     
-    \item[(d)] \( M = \begin{bmatrix} 0 & 2 & 4 & 3 \\ 5 & 0 & 2 & 5 \\ 5 & 1 & 4 & 2 \end{bmatrix} \)
+    \item[(d)] \( M = \begin{bmatrix} 1 & 8 & 9 & 2 \\ \\ 0 & 2 & 4 & 3 \\ 5 & 0 & 2 & 5 \\ 5 & 1 & 4 & 2 \end{bmatrix} \)
     
-    \item[(e)] \( M = \begin{bmatrix} 1 & 6 & 4 & 0 \\ 2 & 7 & 3 & 0 \\ 2 & 0 & 0 & 0 \\ 8 & 9 & 0 & 5 \end{bmatrix} \)
+    \item[(e)] \( M = \begin{bmatrix} 1 & 6 & 4 & 0 \\ 2 & 7 & 3 & 0 \\ 0 & 0 & 0 & 0 \\ 8 & 9 & 0 & 5 \end{bmatrix} \)
 \end{enumerate}
 
 \subsection*{2. Wyznacz macierze odwrotne używając metody Gaussa-Jordana.}
 
 \begin{enumerate}
-    \item[(a)] \( M = \begin{bmatrix} 1 & 1 & 2 \\ 1 & 2 & 4 \\ 1 & 6 & 4 \end{bmatrix} \)
+    \item[(a)] \( M = \begin{bmatrix} 1 & 1 & 2 \\ 2 & 3 & 4 \\ 2 & 1 & 5 \end{bmatrix} \)
     
-    \item[(b)] \( M = \begin{bmatrix} 2 & 7 & 3 \\ 8 & 9 & 5 \end{bmatrix} \)
+    \item[(b)] \( M = \begin{bmatrix} 1 & 6 & 4 \\ 2 & 7 & 3 \\ 8 & 9 & 5 \end{bmatrix} \)
 \end{enumerate}
 
 \subsection*{3. Dokonaj diagonalizacji macierzy.}
 
 \begin{enumerate}
-    \item[(a)] \( M = \begin{bmatrix} 1 & 2 & 3 & 4 \\ 2 & 1 & 5 \\ 1 & 6 & 4 \end{bmatrix} \)
+    \item[(a)] \( M = \begin{bmatrix} 1 & 2 & 3 \\ 2 & 3 & 4 \\ 2 & 1 & 5 \end{bmatrix} \)
     
-    \item[(b)] \( M = \begin{bmatrix} 2 & 7 & 3 \\ 8 & 9 & 5 \end{bmatrix} \)
+    \item[(b)] \( M = \begin{bmatrix} 1 & 6 & 4 \\ 2 & 7 & 3 \\ 8 & 9 & 5 \end{bmatrix} \)
 \end{enumerate}
 
 \subsection*{4. Znajdź wartości własne i wektory własne macierzy.}
@@ -50,45 +50,269 @@
 \subsection*{5. Wykonaj operacje skalowania macierzą \( M \) dla macierzy wierzchołków \( N \).}
 
 \begin{enumerate}
-    \item[(a)] \( M = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 3 \end{bmatrix}, \quad
-    N = \begin{bmatrix} 1 & 1 & 3 \\ -1 & 2 \\ \end{bmatrix} \)
+        \item[(a)] 
+        \[
+        M = \begin{bmatrix} 
+        1 & 0 & 0 \\ 
+        0 & 2 & 0 \\ 
+        0 & 0 & 3 
+        \end{bmatrix}, 
+        \quad
+        N = \begin{bmatrix} 
+        1 & 3 \\ 
+        2 & 1 \\ 
+        -1 & 2 
+        \end{bmatrix}
+        \]
+    
+        \item[(b)] 
+        \[
+        M = \begin{bmatrix} 
+        1 & 0 & 0 \\ 
+        0 & 2 & 0 \\ 
+        0 & 0 & 3 
+        \end{bmatrix}, 
+        \quad
+        N = \begin{bmatrix} 
+        1 & -2 & 5 \\ 
+        -2 & 2 & 3 \\ 
+        3 & 2 & 4 
+        \end{bmatrix}
+        \]
+    
+        \item[(c)] 
+        \[
+        M = \begin{bmatrix} 
+        3 & 0 & 0 \\ 
+        0 & 4 & 0 \\ 
+        0 & 0 & 1 
+        \end{bmatrix}, 
+        \quad
+        N = \begin{bmatrix} 
+        0 & 1 & 2 & -4 \\ 
+        0 & 1 & -1 & 7 \\ 
+        0 & 1 & 3 & 5 
+        \end{bmatrix}
+        \]
 \end{enumerate}
 
 \subsection*{6. Zbuduj macierz skalowania \( S \) dla której wynikiem operacji na punkcie \( P_1 \) będzie punkt \( P_2 \).}
 
 \begin{enumerate}
-    \item[(a)] \( P_1 = \begin{bmatrix} 2 \\ 4 \end{bmatrix}, \quad
-    P_2 = \begin{bmatrix} 0 \\ 2 \end{bmatrix} \)
+    \item[(a)] \( P_1 = \begin{bmatrix} 0 \\ 2 \\ 4 \end{bmatrix}, \quad
+    P_2 = \begin{bmatrix} 0 \\ 4 \\ 2 \end{bmatrix} \)
 \end{enumerate}
 
 \subsection*{7. Siatka geometryczna obiektu zawiera punkty \( P_1, P_2, P_3, P_4 \). Oblicz pozycję punktów \( P_1', P_2', P_3', P_4' \), które powstaną po zastosowaniu do nich macierzy skalowania \( S \) względem punktu \( P_T \).}
 
 \begin{enumerate}
-    \item[(a)] \( S = \begin{bmatrix} 2 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 1 \end{bmatrix}, \quad
-    P_T = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} \)
+    \item[(a)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} -1 \\ 1 \\ 0 \end{bmatrix}, 
+    \quad P_4 = \begin{bmatrix} 2 \\ 2 \\ 0 \end{bmatrix}
+    \]
+    
+    \[
+    S = \begin{bmatrix} 2 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 1 \end{bmatrix}, 
+    \quad P_T = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}
+    \]
+
+    \item[(b)] 
+    \[
+    P_1 = \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 4 \\ -1 \\ 9 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}, 
+    \quad P_4 = \begin{bmatrix} -4 \\ -2 \\ -1 \end{bmatrix}
+    \]
+    
+    \[
+    S = \begin{bmatrix} 2 & 0 & 0 \\ 0 & -3 & 0 \\ 0 & 0 & 4 \end{bmatrix}, 
+    \quad P_T = \begin{bmatrix} -4 \\ -2 \\ -1 \end{bmatrix}
+    \]
+
+    \item[(c)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 5 \\ -5 \\ 5 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 4 \\ 1 \\ 0 \end{bmatrix}, 
+    \quad P_4 = \begin{bmatrix} -4 \\ -2 \\ -1 \end{bmatrix}
+    \]
+    
+    \[
+    S = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 3 \end{bmatrix}, 
+    \quad P_T = \begin{bmatrix} 3 \\ 4 \\ 1 \end{bmatrix}
+    \]
 \end{enumerate}
 
-\subsection*{8. Wyznacz wektor \( V' \) będący wektorem powstałym w wyniku obrotu wektora \( V \) o kąt \( \alpha \) w osi \( Z \).}
+\subsection*{8. Wyznacz wektor \( \mathbf{V'} \) będący wektorem powstałym w wyniku obrotu wektora \( \mathbf{V} \) o kąt \( \alpha \) w osi \( \mathbf{Z} \).}
 
 \begin{enumerate}
-    \item[(a)] \( V = \begin{bmatrix} 3 \\ 9 \\ 0 \end{bmatrix}, \quad \alpha = 60^\circ \)
+    \item[(a)] 
+    \[
+    \mathbf{V} = \begin{bmatrix} 9 \\ 3 \\ 0 \end{bmatrix}, \quad \alpha = 60^\circ
+    \]
+
+    \item[(b)] 
+    \[
+    \mathbf{V} = \begin{bmatrix} 2 \\ 2 \\ 0 \end{bmatrix}, \quad \alpha = 45^\circ
+    \]
+
+    \item[(c)] 
+    \[
+    \mathbf{V} = \begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix}, \quad \alpha = 30^\circ
+    \]
+
+    \item[(d)] 
+    \[
+    \mathbf{V} = \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}, \quad \alpha = 90^\circ
+    \]
 \end{enumerate}
 
-\subsection*{9. Zbuduj macierz obrotu \( R \) pozwalającą wykonać operację obrotu o kąt \( \alpha \) wokół osi \( Z \).}
+
+
+\subsection*{9. Zbuduj macierz obrotu \( \mathbf{R} \) pozwalającą wykonać operację obrotu o kąt \( \alpha \) wokół osi \( \mathbf{Z} \).}
+
+Macierz obrotu wokół osi \( Z \) ma postać:
+
 
 \begin{enumerate}
     \item[(a)] \( \alpha = 30^\circ \)
+    \item[(b)] \( \alpha = 45^\circ \)
+    \item[(c)] \( \alpha = 60^\circ \)
+    \item[(d)] \( \alpha = 90^\circ \)
 \end{enumerate}
 
-\subsection*{10. Pracując we współrzędnych jednorodnych zbuduj macierz transformacji \( F \) pozwalającą wykonać operację skalowania \( S \) oraz translacji \( T \) jednocześnie.}
+
+
+\subsection*{10. Pracując we współrzędnych jednorodnych zbuduj macierz transformacji \( \mathbf{F} \) pozwalającą wykonać operację skalowania \( \mathbf{S} \) oraz translacji \( \mathbf{T} \) jednocześnie. 
+Oblicz pozycję punktów \( P_1', P_2', P_3' \), które powstaną po zastosowaniu do nich macierzy transformacji \( \mathbf{F} \).}
 
 \begin{enumerate}
-    \item[(a)] \( S = \begin{bmatrix} 2 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 1 \end{bmatrix}, \quad
-    T = \begin{bmatrix} 1 \\ 2 \\ 0 \end{bmatrix} \)
+    \item[(a)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0  \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1  \end{bmatrix}
+    \]
+
+    \[
+    S = \begin{bmatrix} 2 & 0 & 0 \\ 0 & 2 & 0 \\ 0 & 0 & 2 \end{bmatrix}, 
+    \quad T = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
+    \]
+
+    \item[(b)] 
+    \[
+    P_1 = \begin{bmatrix} 4 \\ 2 \\ 0  \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 2 \\ 3  \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1  \end{bmatrix}
+    \]
+
+    \[
+    S = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}, 
+    \quad T = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}
+    \]
+
+    \item[(c)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0  \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 1  \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1  \end{bmatrix}
+    \]
+
+    \[
+    S = \begin{bmatrix} 0 & 0 & 0 \\ 0 & 0 & 0 \\ 0 & 0 & 0 \end{bmatrix}, 
+    \quad T = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}
+    \]
+
+    \item[(f)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0  \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 1  \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1  \end{bmatrix}
+    \]
+
+    \[
+    S_x = 2, \quad S_y = 1, \quad S_z = 3, 
+    \quad T = \begin{bmatrix} 1 \\ 1 \\ 2 \end{bmatrix}
+    \]
+
 \end{enumerate}
 
-\subsection*{11. Zbuduj macierz transformacji \( M \) pozwalającą wykonać kolejno operacje obrotu o kąt \( \alpha \) wokół osi \( Z \), obrotu o kąt \( \beta \) wokół osi \( Y \) jednocześnie.}
+
+\subsection*{11. Zbuduj macierz transformacji \( \mathbf{M} \) pozwalającą wykonać kolejno operację obrotu o kąt \( \alpha \) wokół osi \( \mathbf{Z} \), obrotu o kąt \( \beta \) wokół osi \( \mathbf{Y} \) jednocześnie. 
+Oblicz pozycje punktów \( P_1', P_2', P_3' \), które powstaną po zastosowaniu macierzy transformacji \( \mathbf{M} \) do punktów \( P_1, P_2, P_3 \).}
 
 \begin{enumerate}
-    \item[(a)] \( \alpha = 45^\circ, \quad \beta = 90^\circ \)
+    \item[(a)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1 \end{bmatrix}
+    \]
+    
+    \[
+    \quad \alpha = 45^\circ, \quad \beta = 90^\circ
+    \]
 \end{enumerate}
+
+\subsection*{12. Pracując we współrzędnych jednorodnych zbuduj macierz transformacji \( \mathbf{F} \) 
+pozwalającą wykonać kolejno operację skalowania \( \mathbf{S} \), obrotu o kąt \( \alpha \) wokół osi \( \mathbf{X} \), 
+translacji \( \mathbf{T_1} \), obrotu o kąt \( \beta \) wokół osi \( \mathbf{Y} \) i translacji \( \mathbf{T_2} \) jednocześnie.
+Oblicz pozycję punktów \( P_1', P_2', P_3' \), które powstaną po zastosowaniu macierzy transformacji \( \mathbf{F} \) 
+do punktów \( P_1, P_2, P_3 \).}
+
+\begin{enumerate}
+    \item[(a)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 2 \\ 5 \\ 1 \end{bmatrix}
+    \]
+
+    \[
+    S_x = 2, \quad S_y = 1, \quad S_z = 2, 
+    \quad T_1 = \begin{bmatrix} 1 \\ 1 \\ 2 \end{bmatrix}, 
+    \quad T_2 = \begin{bmatrix} 0 \\ 1 \\ 2 \end{bmatrix}
+    \]
+
+    \[
+    \alpha = 45^\circ, \quad \beta = 90^\circ
+    \]
+
+    \item[(b)] 
+    \[
+    P_1 = \begin{bmatrix} 0 \\ 2 \\ 4 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 3 \\ 2 \\ 1 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} 3 \\ -2 \\ 5 \end{bmatrix}
+    \]
+
+    \[
+    S_x = 4, \quad S_y = 2, \quad S_z = 2, 
+    \quad T_1 = \begin{bmatrix} 1 \\ -2 \\ 3 \end{bmatrix}, 
+    \quad T_2 = \begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix}
+    \]
+
+    \[
+    \alpha = 45^\circ, \quad \beta = 120^\circ
+    \]
+
+    \item[(c)] 
+    \[
+    P_1 = \begin{bmatrix} 4 \\ 2 \\ 0 \end{bmatrix}, 
+    \quad P_2 = \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix}, 
+    \quad P_3 = \begin{bmatrix} -1 \\ 2 \\ -4 \end{bmatrix}
+    \]
+
+    \[
+    S_x = 0.5, \quad S_y = 2, \quad S_z = 3, 
+    \quad T_1 = \begin{bmatrix} 5 \\ -1 \\ 2 \end{bmatrix}, 
+    \quad T_2 = \begin{bmatrix} 2 \\ 0 \\ 4 \end{bmatrix}
+    \]
+
+    \[
+    \alpha = 150^\circ, \quad \beta = 270^\circ
+    \]
+\end{enumerate}
+
