all preparing exam material have added

--- a/main.tex
+++ b/main.tex
@@ -32,4 +32,10 @@
 
 \input{sections/matrix.tex}
 
+\input{sections/frustum.tex}
+
+\input{sections/ray_tracing.tex}
+
+\input{sections/oswietlenie.tex}
+
 \end{document}
