--- a/sections/main_formulas.tex
+++ b/sections/main_formulas.tex
@@ -305,8 +305,6 @@ R_z(\theta) \;=\;
 
 
 
-
-
 % -------------- Diagonalizacja macierzy ----------------
 
 \vspace{1em}
@@ -335,7 +333,7 @@ Macierz diagonalna \(D\) zawiera wartości własne (ang.~\emph{eigenvalues}) mac
 \end{figure}
 
 
-\subsection{Przykład diagonalizacji prostej macierzy \(2 \times 2\)}
+Przykład diagonalizacji prostej macierzy \(2 \times 2\)
 
 Rozważmy macierz:
 \[
@@ -458,6 +456,7 @@ W przypadku poprawnego doboru \(P\) i \(D\) otrzymamy dokładnie macierz \(M\).
 
 
 
+\vspace{1em}
 \noindent
 Macierz skalowania w trójwymiarowej przestrzeni można zapisać jako:
 \[
@@ -483,4 +482,20 @@ Działanie tej transformacji na wektor \(\mathbf{V} = (V_x, V_y, V_z)^\top\) daj
 \gamma\,V_z
 \end{pmatrix}.
 \]
+
+
+\[
+\text{Niech prosta będzie zadana przez punkt } S \text{ i wektor kierunkowy } V.
+\]
+\[
+\text{Jeżeli } P \text{ to punkt w przestrzeni, to jego odległość od tej prostej wynosi:}
+\quad
+d \;=\; \frac{\|(P - S)\times V\|}{\|V\|}.
+\]
+\[
+\text{W powyższym wzorze: }
+(P-S)\times V \text{ oznacza iloczyn wektorowy, }
+\|\cdot\|\text{ - normę (długość) wektora.}
+\]
+
 
